B&L QA/objects/Email_Notification__c.object
<CustomObject>
    <description>This object contains the email notifications for which an account is configured to receive, who will receive them, and to what email address they will be sent.  An example notification is advanced shipping notifications (ASN).  NACSS</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Email Notifications</relationshipLabel>
        <relationshipName>Email_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_Not_Ask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator for B+L personnel to not ask customer for their email address again.  We already asked, and they declined.</description>
        <label>Do Not Ask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Id__c</fullName>
        <description>Unique external ID that consists of SETID, Customer ID (Ship To), Transaction Type, and Email Address.</description>
        <externalId>true</externalId>
        <label>Legacy System Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>The transaction, or email notification type.  For example, advanced shipping notification (ASN)</description>
        <label>Transaction Type</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Email Notification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Email Notifications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>